--- a/search.html
+++ b/search.html
@@ -14,19 +14,13 @@
     <div class="navbar">
         <nav>
             <ul>
-                <li class="brand">
-                    <img src="img/logo.png" alt="PrimeTuneLogo">
-                    <h1>PrimeTune</h1>
-                </li>
                 <li>
-                    <a href="Home.php">Home</a>
+                    <img src="img/logo.png" alt="logo">
                 </li>
-                <li>
-                    <a href="Search.php">Search</a>
-                </li>
-                <li>
-                    <a href="Add.php">Add</a>
-                </li>
+                <li><a href="Home.html">Home<span></span></a></li>
+                <li><a href="search.html">Search<span></span></a></li>
+                <li><a href="library.html">Library<span></span></a></li>
+                <li><a href="#">About us<span></span></a></li>
             </ul>
         </nav>
     </div>
