--- a/Login.html
+++ b/Login.html
@@ -19,16 +19,15 @@
 
     <div class="options">
         <div class="option active">
-            <img src="https://66.media.tumblr.com/8b69cdde47aa952e4176b4200052abf4/tumblr_o51p7mFFF21qho82wo1_1280.jpg"
-                alt="">
+            <img src="Dabang.jpg" alt="">
             <div class="shadow"></div>
             <div class="label">
                 <div class="icon">
                     <i class="fas fa-walking"></i>
                 </div>
                 <div class="info">
-                    <div class="main">Blonkisoaz</div>
-                    <div class="sub">Omuke trughte a otufta</div>
+                    <div class="main">Dabanng</div>
+                    <div class="sub">Chori kiya re jiya</div>
                 </div>
             </div>
         </div>
