--- a/Home.html
+++ b/Home.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li>
-                    <img src="img/logo.png" alt="logo">
+                    <i class="fa-solid fa-circle-play"></i>
                 </li>
                 <li><a href="Home.html">Home<span></span></a></li>
                 <li><a href="search.html">Search<span></span></a></li>
