--- a/Login.html
+++ b/Login.html
@@ -11,7 +11,7 @@
     <script type='text/javascript' src='https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js'></script>
 </head>
 
-<body oncontextmenu='return false' class='snippet-body'>
+<body class='snippet-body'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css'>
     <link rel='stylesheet' href='https://static.fontawesome.com/css/fontawesome-app.css'>
     <link rel='stylesheet' href='https://pro.fontawesome.com/releases/v5.2.0/css/all.css'>
@@ -23,7 +23,7 @@
             <div class="shadow"></div>
             <div class="label">
                 <div class="icon">
-                    <i class="fas fa-walking"></i>
+                    <i class="fas fa-play"></i>
                 </div>
                 <div class="info">
                     <div class="main">Dabanng</div>
@@ -36,7 +36,7 @@
             <div class="shadow"></div>
             <div class="label">
                 <div class="icon">
-                    <i class="fas fa-snowflake"></i>
+                    <i class="fas fa-play"></i>
                 </div>
                 <div class="info">
                     <div class="main">Oretemauw</div>
@@ -49,7 +49,7 @@
             <div class="shadow"></div>
             <div class="label">
                 <div class="icon">
-                    <i class="fas fa-tree"></i>
+                    <i class="fas fa-play"></i>
                 </div>
                 <div class="info">
                     <div class="main">Iteresuselle</div>
@@ -62,7 +62,7 @@
             <div class="shadow"></div>
             <div class="label">
                 <div class="icon">
-                    <i class="fas fa-tint"></i>
+                    <i class="fas fa-play"></i>
                 </div>
                 <div class="info">
                     <div class="main">Idiefe</div>
@@ -75,7 +75,7 @@
             <div class="shadow"></div>
             <div class="label">
                 <div class="icon">
-                    <i class="fas fa-sun"></i>
+                    <i class="fas fa-play"></i>
                 </div>
                 <div class="info">
                     <div class="main">Inatethi</div>
