--- a/Login.html
+++ b/Login.html
@@ -6,90 +6,109 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form Animation CSS | Codehal</title>
     <link rel="stylesheet" href="style.css">
-    <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-    <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'></script>
-    <script type='text/javascript' src='https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js'></script>
 </head>
 
 <body class='snippet-body'>
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css'>
-    <link rel='stylesheet' href='https://static.fontawesome.com/css/fontawesome-app.css'>
-    <link rel='stylesheet' href='https://pro.fontawesome.com/releases/v5.2.0/css/all.css'>
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:400,700'>
+    <div class="background"></div>
+    <div class="background-texture"></div>
 
-    <div class="options">
-        <div class="option active">
-            <img src="Dabang.jpg" alt="">
-            <div class="shadow"></div>
-            <div class="label">
-                <div class="icon">
-                    <i class="fas fa-play"></i>
+    <section class="carousel">
+        <h2 class="categories__title">My List</h2>
+        <div class="carousel__container">
+            <div class="carousel-item">
+                <img class="carousel-item__img"
+                    src="https://images.pexels.com/photos/708392/pexels-photo-708392.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="people" />
+                <div class="carousel-item__details">
+                    <div class="controls">
+                        <span class="fas fa-play-circle"></span>
+                        <span class="fas fa-plus-circle"></span>
+                    </div>
+                    <h5 class="carousel-item__details--title">Descriptive Title</h5>
+                    <h6 class="carousel-item__details--subtitle">Date and Duration</h6>
                 </div>
-                <div class="info">
-                    <div class="main">Dabanng</div>
-                    <div class="sub">Chori kiya re jiya</div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__img"
+                    src="https://images.pexels.com/photos/1785001/pexels-photo-1785001.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="people" />
+                <div class="carousel-item__details">
+                    <div class="controls">
+                        <span class="fas fa-play-circle"></span>
+                        <span class="fas fa-plus-circle"></span>
+                    </div>
+                    <h5 class="carousel-item__details--title">Descriptive Title</h5>
+                    <h6 class="carousel-item__details--subtitle">Date and Duration</h6>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__img"
+                    src="https://images.pexels.com/photos/417344/pexels-photo-417344.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+                    alt="people" />
+                <div class="carousel-item__details">
+                    <div class="controls">
+                        <span class="fas fa-play-circle"></span>
+                        <span class="fas fa-plus-circle"></span>
+                    </div>
+                    <h5 class="carousel-item__details--title">Descriptive Title</h5>
+                    <h6 class="carousel-item__details--subtitle">Date and Duration</h6>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__img"
+                    src="https://images.pexels.com/photos/1071882/pexels-photo-1071882.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="people" />
+                <div class="carousel-item__details">
+                    <div class="controls">
+                        <span class="fas fa-play-circle"></span>
+                        <span class="fas fa-plus-circle"></span>
+                    </div>
+                    <h5 class="carousel-item__details--title">Descriptive Title</h5>
+                    <h6 class="carousel-item__details--subtitle">Date and Duration</h6>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__img"
+                    src="https://images.pexels.com/photos/417344/pexels-photo-417344.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+                    alt="people" />
+                <div class="carousel-item__details">
+                    <div class="controls">
+                        <span class="fas fa-play-circle"></span>
+                        <span class="fas fa-plus-circle"></span>
+                    </div>
+                    <h5 class="carousel-item__details--title">Descriptive Title</h5>
+                    <h6 class="carousel-item__details--subtitle">Date and Duration</h6>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-item__img"
+                    src="https://images.pexels.com/photos/6945/sunset-summer-golden-hour-paul-filitchkin.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="people" />
+                <div class="carousel-item__details">
+                    <div class="controls">
+                        <span class="fas fa-play-circle"></span>
+                        <span class="fas fa-plus-circle"></span>
+                    </div>
+                    <h5 class="carousel-item__details--title">Descriptive Title</h5>
+                    <h6 class="carousel-item__details--subtitle">Date and Duration</h6>
+                </div>
+            </div>
+
+            <div class="carousel-item">
+                <img class="carousel-item__img"
+                    src="https://images.pexels.com/photos/1964471/pexels-photo-1964471.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"
+                    alt="people" />
+                <div class="carousel-item__details">
+                    <div class="controls">
+                        <span class="fas fa-play-circle"></span>
+                        <span class="fas fa-plus-circle"></span>
+                    </div>
+                    <h5 class="carousel-item__details--title">Descriptive Title</h5>
+                    <h6 class="carousel-item__details--subtitle">Date and Duration</h6>
                 </div>
             </div>
         </div>
-        <div class="option"
-            style="--optionBackground:url(https://66.media.tumblr.com/8b69cdde47aa952e4176b4200052abf4/tumblr_o51p7mFFF21qho82wo1_1280.jpg);">
-            <div class="shadow"></div>
-            <div class="label">
-                <div class="icon">
-                    <i class="fas fa-play"></i>
-                </div>
-                <div class="info">
-                    <div class="main">Oretemauw</div>
-                    <div class="sub">Omuke trughte a otufta</div>
-                </div>
-            </div>
-        </div>
-        <div class="option"
-            style="--optionBackground:url(https://66.media.tumblr.com/5af3f8303456e376ceda1517553ba786/tumblr_o4986gakjh1qho82wo1_1280.jpg);">
-            <div class="shadow"></div>
-            <div class="label">
-                <div class="icon">
-                    <i class="fas fa-play"></i>
-                </div>
-                <div class="info">
-                    <div class="main">Iteresuselle</div>
-                    <div class="sub">Omuke trughte a otufta</div>
-                </div>
-            </div>
-        </div>
-        <div class="option"
-            style="--optionBackground:url(https://66.media.tumblr.com/5516a22e0cdacaa85311ec3f8fd1e9ef/tumblr_o45jwvdsL11qho82wo1_1280.jpg);">
-            <div class="shadow"></div>
-            <div class="label">
-                <div class="icon">
-                    <i class="fas fa-play"></i>
-                </div>
-                <div class="info">
-                    <div class="main">Idiefe</div>
-                    <div class="sub">Omuke trughte a otufta</div>
-                </div>
-            </div>
-        </div>
-        <div class="option"
-            style="--optionBackground:url(https://66.media.tumblr.com/f19901f50b79604839ca761cd6d74748/tumblr_o65rohhkQL1qho82wo1_1280.jpg);">
-            <div class="shadow"></div>
-            <div class="label">
-                <div class="icon">
-                    <i class="fas fa-play"></i>
-                </div>
-                <div class="info">
-                    <div class="main">Inatethi</div>
-                    <div class="sub">Omuke trughte a otufta</div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script type="text/javascript">
-        $(".option").click(function () {
-            $(".option").removeClass("active");
-            $(this).addClass("active");
-        });
-    </script>
+    </section>
 </body>
 
 </html>
