--- a/search.html
+++ b/search.html
@@ -7,9 +7,6 @@
     <title>Prime Tune</title>
     <link rel="icon" href="img/logo.png" type="image/icon type">
     <link rel="stylesheet" href="search.css">
-    <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-    <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'></script>
-    <script type='text/javascript' src='https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js'></script>
 </head>
 <meta name="color-scheme" content="dark light">
 
@@ -32,12 +29,9 @@
             <input type="text" id="search-bar" placeholder="Search..." onclick="search()">
             <div id="searchresults"></div>
         </div>
-        <div class="title">
-            <h1>All Albums</h1>
-        </div>
-
         <section class="carousel">
             <div class="carousel__container">
+                <h2>Hindi Songs</h2>
                 <div class="carousel-item">
                     <img class="carousel-item__img"
                         src="song_img/ishq_wala.jpg"
@@ -47,8 +41,8 @@
                             <span class="fas fa-play-circle"></span>
                             <span class="fas fa-plus-circle"></span>
                         </div>
-                        <h5 class="carousel-item__details--title">Descriptive Title</h5>
-                        <h6 class="carousel-item__details--subtitle">Date and Duration</h6>
+                        <h5 class="carousel-item__details--title">Ishq Wala Love</h5>
+                        <h6 class="carousel-item__details--subtitle">Vishal-Shekhar</h6>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -60,8 +54,8 @@
                             <span class="fas fa-play-circle"></span>
                             <span class="fas fa-plus-circle"></span>
                         </div>
-                        <h5 class="carousel-item__details--title">Descriptive Title</h5>
-                        <h6 class="carousel-item__details--subtitle">Date and Duration</h6>
+                        <h5 class="carousel-item__details--title">Paniyon Sa</h5>
+                        <h6 class="carousel-item__details--subtitle">Atif Aslam</h6>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -73,8 +67,8 @@
                             <span class="fas fa-play-circle"></span>
                             <span class="fas fa-plus-circle"></span>
                         </div>
-                        <h5 class="carousel-item__details--title">Descriptive Title</h5>
-                        <h6 class="carousel-item__details--subtitle">Date and Duration</h6>
+                        <h5 class="carousel-item__details--title">Tu Mile Dil Khile</h5>
+                        <h6 class="carousel-item__details--subtitle">Stebin Ben</h6>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -86,8 +80,8 @@
                             <span class="fas fa-play-circle"></span>
                             <span class="fas fa-plus-circle"></span>
                         </div>
-                        <h5 class="carousel-item__details--title">Descriptive Title</h5>
-                        <h6 class="carousel-item__details--subtitle">Date and Duration</h6>
+                        <h5 class="carousel-item__details--title">Tere Naina</h5>
+                        <h6 class="carousel-item__details--subtitle">Shankar-Ehsaan-Loy</h6>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -99,8 +93,8 @@
                             <span class="fas fa-play-circle"></span>
                             <span class="fas fa-plus-circle"></span>
                         </div>
-                        <h5 class="carousel-item__details--title">Descriptive Title</h5>
-                        <h6 class="carousel-item__details--subtitle">Date and Duration</h6>
+                        <h5 class="carousel-item__details--title">O Mahi</h5>
+                        <h6 class="carousel-item__details--subtitle">Arjit Singh/h6>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -112,8 +106,8 @@
                             <span class="fas fa-play-circle"></span>
                             <span class="fas fa-plus-circle"></span>
                         </div>
-                        <h5 class="carousel-item__details--title">Descriptive Title</h5>
-                        <h6 class="carousel-item__details--subtitle">Date and Duration</h6>
+                        <h5 class="carousel-item__details--title">Tera Ghata</h5>
+                        <h6 class="carousel-item__details--subtitle">Gajendra Verma</h6>
                     </div>
                 </div>
 
@@ -126,8 +120,8 @@
                             <span class="fas fa-play-circle"></span>
                             <span class="fas fa-plus-circle"></span>
                         </div>
-                        <h5 class="carousel-item__details--title">Descriptive Title</h5>
-                        <h6 class="carousel-item__details--subtitle">Date and Duration</h6>
+                        <h5 class="carousel-item__details--title">Hasi-Male Version</h5>
+                        <h6 class="carousel-item__details--subtitle">Ami Mishra</h6>
                     </div>
                 </div>
             </div>
@@ -135,7 +129,7 @@
 
         <section class="carousel">
             <div class="carousel__container">
-                <h2>Top Artists</h2>
+                <h2>Tamil song</h2>
                 <div class="carousel-item">
                     <img class="carousel-item__img"
                         src="song_img/beast.jpg"
@@ -145,8 +139,8 @@
                             <span class="fas fa-play-circle"></span>
                             <span class="fas fa-plus-circle"></span>
                         </div>
-                        <h5 class="carousel-item__details--title">Descriptive Title</h5>
-                        <h6 class="carousel-item__details--subtitle">Date and Duration</h6>
+                        <h5 class="carousel-item__details--title">Arebic Kuthu</h5>
+                        <h6 class="carousel-item__details--subtitle">Anirudh Ravichandran</h6>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -158,8 +152,8 @@
                             <span class="fas fa-play-circle"></span>
                             <span class="fas fa-plus-circle"></span>
                         </div>
-                        <h5 class="carousel-item__details--title">Descriptive Title</h5>
-                        <h6 class="carousel-item__details--subtitle">Date and Duration</h6>
+                        <h5 class="carousel-item__details--title">Vikram</h5>
+                        <h6 class="carousel-item__details--subtitle">Anirudh Ravichandran</h6>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -171,8 +165,8 @@
                             <span class="fas fa-play-circle"></span>
                             <span class="fas fa-plus-circle"></span>
                         </div>
-                        <h5 class="carousel-item__details--title">Descriptive Title</h5>
-                        <h6 class="carousel-item__details--subtitle">Date and Duration</h6>
+                        <h5 class="carousel-item__details--title">Unakku Thaan</h5>
+                        <h6 class="carousel-item__details--subtitle">Santosh Narayan</h6>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -184,8 +178,8 @@
                             <span class="fas fa-play-circle"></span>
                             <span class="fas fa-plus-circle"></span>
                         </div>
-                        <h5 class="carousel-item__details--title">Descriptive Title</h5>
-                        <h6 class="carousel-item__details--subtitle">Date and Duration</h6>
+                        <h5 class="carousel-item__details--title">Thee Thalapathy</h5>
+                        <h6 class="carousel-item__details--subtitle">Silambarasan TR</h6>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -197,21 +191,21 @@
                             <span class="fas fa-play-circle"></span>
                             <span class="fas fa-plus-circle"></span>
                         </div>
-                        <h5 class="carousel-item__details--title">Descriptive Title</h5>
-                        <h6 class="carousel-item__details--subtitle">Date and Duration</h6>
+                        <h5 class="carousel-item__details--title">Badass</h5>
+                        <h6 class="carousel-item__details--subtitle">Anirudh Ravichandran</h6>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img class="carousel-item__img"
-                        src="song_img/leo.jpg"
+                        src="song_img/Hukkum.jpg"
                         alt="people" />
                     <div class="carousel-item__details">
                         <div class="controls">
                             <span class="fas fa-play-circle"></span>
                             <span class="fas fa-plus-circle"></span>
                         </div>
-                        <h5 class="carousel-item__details--title">Descriptive Title</h5>
-                        <h6 class="carousel-item__details--subtitle">Date and Duration</h6>
+                        <h5 class="carousel-item__details--title">Hukum-Thalaivar Alappara</h5>
+                        <h6 class="carousel-item__details--subtitle">Anirudh Ravichandran</h6>
                     </div>
                 </div>
 
@@ -224,8 +218,106 @@
                             <span class="fas fa-play-circle"></span>
                             <span class="fas fa-plus-circle"></span>
                         </div>
-                        <h5 class="carousel-item__details--title">Descriptive Title</h5>
-                        <h6 class="carousel-item__details--subtitle">Date and Duration</h6>
+                        <h5 class="carousel-item__details--title">Beast Mode</h5>
+                        <h6 class="carousel-item__details--subtitle">Anirudh Ravichandran</h6>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="carousel">
+            <div class="carousel__container">
+                <h2>Punjabi song</h2>
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/Sarkar_sadi.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Arebic Kuthu</h5>
+                        <h6 class="carousel-item__details--subtitle">Anirudh Ravichandran</h6>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/siddhu-musawala.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Vikram</h5>
+                        <h6 class="carousel-item__details--subtitle">Anirudh Ravichandran</h6>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/Wah-Wai-Wahh-.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Unakku Thaan</h5>
+                        <h6 class="carousel-item__details--subtitle">Santosh Narayan</h6>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/Thee_thalapathy.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Thee Thalapathy</h5>
+                        <h6 class="carousel-item__details--subtitle">Silambarasan TR</h6>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/badass.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Badass</h5>
+                        <h6 class="carousel-item__details--subtitle">Anirudh Ravichandran</h6>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/Hukkum.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Hukum-Thalaivar Alappara</h5>
+                        <h6 class="carousel-item__details--subtitle">Anirudh Ravichandran</h6>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/beastmode.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Beast Mode</h5>
+                        <h6 class="carousel-item__details--subtitle">Anirudh Ravichandran</h6>
                     </div>
                 </div>
             </div>
