--- a/search.html
+++ b/search.html
@@ -20,7 +20,7 @@
                 <li><a href="Home.html">Home<span></span></a></li>
                 <li><a href="search.html">Search<span></span></a></li>
                 <li><a href="library.html">Library<span></span></a></li>
-                <li><a href="#">About us<span></span></a></li>
+                <li><a href="aboutus.html">About us<span></span></a></li>
             </ul>
         </nav>
     </div>
