--- a/aboutus.html
+++ b/aboutus.html
@@ -34,16 +34,16 @@
           <h2>Pranav Kshirsagar<br /><span>Full-Stack Developer</span></h2>
           <ul class="sci">
             <li>
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://www.facebook.com/pranav.kshirsagar.716"><i class="fab fa-facebook-f"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fab fa-github" id="T"></i></a>
+              <a href="https://github.com/Pranav7038"><i class="fab fa-github" id="T"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fab fa-linkedin-in" id="L"></i></a>
+              <a href="https://www.linkedin.com/in/pranav-kshirsagar-3a204823a/"><i class="fab fa-linkedin-in" id="L"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fab fa-instagram" id="I"></i></a>
+              <a href="https://www.instagram.com/pranav8289"><i class="fab fa-instagram" id="I"></i></a>
             </li>
           </ul>
         </div>
@@ -58,16 +58,16 @@
           <h2>Pranav Hydrabade<br /><span>Senior Designer</span></h2>
           <ul class="sci">
             <li>
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://www.facebook.com/pranav.hydrabade.7?mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fab fa-github" id="T"></i></a>
+              <a href="https://github.com/pranav2329h"><i class="fab fa-github" id="T"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fab fa-linkedin-in" id="L"></i></a>
+              <a href="https://www.linkedin.com/in/pranav-hydrabade-10952a255?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in" id="L"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fab fa-instagram" id="I"></i></a>
+              <a href="https://www.instagram.com/mr.pranav_h?igsh=OWZ1dXV6OXo2aml3"><i class="fab fa-instagram" id="I"></i></a>
             </li>
           </ul>
         </div>
